--- a/wordleh.css
+++ b/wordleh.css
@@ -48,15 +48,15 @@ body {
 }
 
 .letter {
-    width: 2em;
-    height: 2em;
+    width: 5vw;
+    height: 5vw;
     text-align: center;
     border-width: 3px;
     border-style: solid;
     border-color: rgb(211, 214, 218);
     text-transform: uppercase;
     font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
-    font-size: 2em;
+    font-size: 4.5vw;
     font-weight: bold;
     color: white;
 }
@@ -101,7 +101,14 @@ table tr:nth-child(odd) td{
 
 .skipcontainer {
     margin-left: auto;
-      margin-right: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+.includecontainer {
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 5px;
     margin-bottom: 5px;
 }
@@ -109,8 +116,21 @@ table tr:nth-child(odd) td{
 .skipinput {
     font-size: 100%;
     text-align: left;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(145, 145, 145);
     text-transform: uppercase;
+    background-color: rgb(121, 124, 126);
+    color: white;
+    font-weight: bold;
+    padding: 4px;
+}
+
+.includeinput {
+    font-size: 100%;
+    text-align: left;
+    text-transform: uppercase;
+    background-color: rgb(198, 180, 102);
+    color: white;
+    font-weight: bold;
+    padding: 4px;
+    display: none;
+
 }
